--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.0",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "@types/react": "^18.2.0",
+    "@types/node": "^18.0.0"
   }
 }
